--- a/blocks/content_places.css
+++ b/blocks/content_places.css
@@ -87,10 +87,14 @@
   object-fit: cover;
 }
 .content__frame6 {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-decoration: none;
+  text-align: center;
   grid-area: button;
   width: 355px;
   height: 48px;
-  padding: 13px 20px;
   background-color: #0278fe;
   border-style: none;
   border-radius: 4px;
@@ -102,11 +106,6 @@
   margin: 0;
   text-align: center;
   transition: 0.5s ease;
-}
-.button-text {
-  font-style: normal;
-  text-decoration: none;
-  color: #fff;
 }
 .content__frame6:hover {
   background-color: #0063d2;
